--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,10 @@ inputs:
   docker_compose_down:
     description: Execute docker-compose down ("true" or "false").
     default: 'false'
+  dockerhub_username:
+    description: Docker Hub username used for login.
+  dockerhub_password:
+    description: Docker Hub password used for login.
 runs:
   using: docker
   image: Dockerfile
@@ -47,3 +51,5 @@ runs:
     NO_CACHE: ${{ inputs.no_cache }}
     TAR_PACKAGE_OPERATION_MODIFIERS: ${{ inputs.tar_package_operation_modifiers }}
     DOCKER_COMPOSE_DOWN: ${{ inputs.docker_compose_down }}
+    DOCKERHUB_USERNAME: ${{ inputs.dockerhub_username }}
+    DOCKERHUB_PASSWORD: ${{ inputs.dockerhub_password }}
